--- a/OXID-mo4free-bis-4_6/install.txt
+++ b/OXID-mo4free-bis-4_6/install.txt
@@ -35,4 +35,4 @@ Mobile theme by digidesk - media solutions
 	
 6)  clear the tmp-directory
 
-7)  set write permissions for the directory "mobile_tmp"
+7)  set read and write permissions for the directory "mobile_tmp" (minimum CHMOD: 555, common CHMOD: 755)
