--- a/OXID-mo4free-ab-4_7/4_7_x/changelog.txt
+++ b/OXID-mo4free-ab-4_7/4_7_x/changelog.txt
@@ -1,3 +1,6 @@
+version 1.0.5
+- fixed a bug that showed switching link on desktop browsers
+
 version 1.0.4
 - change for oxid 4.7.x, also fix the cookie bug and add (almost) every mobile devices
 - it is not more necessary to login as an administrator to call dd_oxidmobile_install.php, the file will be removed after installation
